update the image name overflow in the detection page when uploaded  by user, fix the fungal infection disease name broken to next line, fix the css for the skin diseases modules- gap between bottom information card module with footer

--- a/static/style.css
+++ b/static/style.css
@@ -27,17 +27,7 @@ h2, p {
 }
 
 
-.navbar li.dermdetect{
-    float:left;
-    /* display: block; */
-    display: flex;
-    align-items: center; /*align the image and text */
-    color: rgb(11, 11, 11);
-    text-align: center;
-    gap: 4px; /*gap between logo and dermdetect*/
-    padding: 14px 16px;
-    text-decoration: none;
-}
+
 
 /* ul {
   list-style-type: none;
@@ -68,6 +58,7 @@ h2, p {
   background-color: #94d9ea;
   position:sticky;
   top: 0;
+ font-size: 1.7rem;
  
 
   /* position: fixed;
@@ -76,6 +67,21 @@ h2, p {
   width: 100%;
   z-index: 1000;  */
 }
+
+/* css for the aligment of word dermdetect in navbar */
+.navbar li.dermdetect{
+    float:left;
+    /* display: block; */
+    display: flex;
+    align-items: center; /*align the image and text */
+    color: rgb(11, 11, 11);
+    text-align: center;
+    gap: 4px; /*gap between logo and dermdetect*/
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+
 
 .navbar li {
   float: right;
@@ -199,11 +205,12 @@ h2, p {
   overflow-x: scroll;
   scroll-snap-type: x mandatory;
 
-  /* from claude */
+  
   list-style: none;
   padding: 20px 10px;
   margin: 0;
   gap:20px;
+  padding-bottom: 45px; /*to make sure the bottom of card information appear above the footer*/
 }
 
 .card_information{
@@ -215,10 +222,12 @@ h2, p {
 
   /*  */
   background: #fff;
+  border: 0.75px solid black;
   border-radius: 12px;
   box-shadow: 0 2px 12px rgba(0,0,0,0.1);
   overflow: hidden;
   padding-bottom: 20px;
+ 
 }
 
 .card-img{
@@ -426,11 +435,19 @@ html{
   display: flex;
   flex-direction: column;
   flex: 1;
+  overflow: hidden;
+  min-width: 0; /*to truncate the flexbox*/
 }
 
 .container .box .imgbox .file-name{
   font-size: 1.5rem;
+  white-space:  nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 700px;
+
 } /* end of uplod button page css */
+
 
 
 /* predict button in detection page */
@@ -461,6 +478,7 @@ html{
    background-color:#94d9ea;
    color: black;
    text-align: center;
+   font-size: 1.7rem;
 }
 
 .container.active.imgbox{
